--- a/src/main/resources/templates/login-page/login.html
+++ b/src/main/resources/templates/login-page/login.html
@@ -50,13 +50,21 @@
 
         h1 {
             font-weight: bold;
-            margin: 0;
-            color: #ffffff;
+            margin-top: 55px;
+            color: #000000;
         }
 
         h2 {
             text-align: center;
             color: #000;
+        }
+
+        h3 {
+            text-align: center;
+            color: #ffffff;
+            font-weight: bold;
+            font-size: 30px;
+            margin: 0;
         }
 
         p {
@@ -113,7 +121,7 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
-            padding: 0 50px;
+            padding: 0 45px;
             height: 100%;
             text-align: center;
             transition: background-color 0.6s ease-in-out, color 0.6s ease-in-out;
@@ -340,12 +348,12 @@
     <div class="overlay-container">
         <div class="overlay">
             <div class="overlay-panel overlay-left">
-                <h1>Welcome Back!</h1>
+                <h3>Welcome Back!</h3>
                 <p>To keep connected with us, please log in with your personal info</p>
                 <button class="ghost" id="signIn">Sign In</button>
             </div>
             <div class="overlay-panel overlay-right">
-                <h1>Hello, Friend!</h1>
+                <h3>Hello, Friend!</h3>
                 <p>Enter your personal details and start your journey with us</p>
                 <button class="ghost" id="signUp">Sign Up</button>
             </div>
